Fixing a message bubble layout problem

--- a/src/app/components/messages/messages.component.css
+++ b/src/app/components/messages/messages.component.css
@@ -65,7 +65,6 @@
     max-width: fit-content;
     font-size: 13px;
     display: flex;
-    max-width: 300px;
     flex-wrap: wrap;
     word-break: break-word;
     text-align: left;
